--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
+    "sass": "node-sass site/themes/hugo-future-imperfect-slim/static/css/main.scss site/themes/hugo-future-imperfect-slim/static/css/main.css",
     "webpack": "gulp webpack",
     "build": "gulp build",
     "build-preview": "gulp build-preview",
@@ -34,6 +35,7 @@
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.6.5",
+    "node-sass": "^4.12.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^8.1.2",
     "postcss-loader": "^0.9.1",
