fixing public image source

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: "site/static/img/blog" # Folder where user uploaded files should go
-# public_folder: "site"
+public_folder: "/img/blog"
 
 collections: # A list of collections the CMS should be able to edit
   - name: "blog" # Used in routes, ie.: /admin/collections/:slug/edit
