--- a/site/config.toml
+++ b/site/config.toml
@@ -5,7 +5,7 @@ theme                   = "hugo-future-imperfect-slim"
 preserveTaxonomyNames   = true
 paginate                = 3
 disqusShortname         = "niria-in"
-googleAnalytics         = ""
+googleAnalytics         = "UA-35803776-1"
 pluralizeListTitles     = false
 disableLanguages        = ["fr, pl"]
 
