fixing twitter card properly

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl                 = "https://niria.in/"
+baseURL = "https://niria.in"
 DefaultContentLanguage  = "en"
 title                   = "niria.in"
 theme                   = "hugo-future-imperfect-slim"
